<resources>
    <string name="app_name">Mobilympics</string>
    <string name="host_a_game">Host A Game</string>
    <string name="find_a_game">Find A Game</string>
    <string name="leaderboard">Leaderboard\nComing Soon!</string>
    <string name="options">Options</string>
    <string name="host_s_lobby">(Host)\'s\nLobby</string>
    <string name="game_options">Game Options</string>
    <string name="x_turn">X\'s Turn</string>
    <string name="o_turn">O\'s Turn</string>
    <string name="ttt_winner_message">Winner Message</string>
    <string name="ttt_play_again_button_text">Play Again?</string>
    <string name="invalid_move">Invalid Move! Try Again.</string>
    <string name="x_wins">X Wins!</string>
    <string name="o_wins">O Wins!</string>
    <string name="cat_wins">No Winner :(</string>
    <string name="discover">Discover</string>
    <string name="dots_n_boxes_title">Dots N Boxes</string>
    <string name="DNB_welcome">Welcome to Dots N Boxes!</string>
    <string name="DNB_r_your_turn">It\'s your turn (red) to play!</string>
    <string name="DNB_b_your_turn">It\'s your turn (blue) to play!</string>
    <string name="DNB_r_opp_turn">It\'s your opponent\'s turn (red) to play!</string>
    <string name="DNB_b_opp_turn">It\'s your opponent\'s turn (blue) to play!</string>
    <string name="DNB_rwin">Red wins!</string>
    <string name="DNB_bwin">Blue wins!</string>
    <string name="horiz">horiz</string>
    <string name="vert">vert</string>
    <string name="box">box</string>
    <string name="DNB_tie">It\'s a tie!</string>
    <string name="checkers_title">Checkers</string>
    <string name="checkers_welcome">Welcome to Checkers!</string>
</resources>