<?xml version="1.0" encoding="utf-8"?>
<!--LAYOUT file for TicTacToe game-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicTacToeActivity">

    <!-- TODO - Add Toolbar here-->

    <TextView
        style="@style/TTTText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ttt_turn_indicator"
        android:text="@string/x_turn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25sp"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:id="@+id/ttt_game_grid"
        app:layout_constraintTop_toBottomOf="@id/ttt_turn_indicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50sp">
        <Button style="@style/TTTButton"/>
        <Button style="@style/TTTButton"/>
        <Button style="@style/TTTButton"/>
        <Button style="@style/TTTButton"/>
        <Button style="@style/TTTButton"/>
        <Button style="@style/TTTButton"/>
        <Button style="@style/TTTButton"/>
        <Button style="@style/TTTButton"/>
        <Button style="@style/TTTButton"/>
    </GridLayout>

    <TextView
        style="@style/TTTText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ttt_winner_message"
        android:visibility="invisible"
        android:id="@+id/ttt_winner_message"
        app:layout_constraintTop_toBottomOf="@id/ttt_game_grid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ttt_play_again_button_text"
        android:visibility="invisible"
        android:id="@+id/ttt_play_again_button"
        app:layout_constraintTop_toBottomOf="@id/ttt_winner_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>